I edited the bolding in part of the text.

--- a/mso_app/templates/mso_app/events.html
+++ b/mso_app/templates/mso_app/events.html
@@ -79,7 +79,7 @@
                     <br>
                     <p class="lead fw-normal text-muted mb-0"><strong>Where:</strong> Lucy's Hideaway, 5847 County Hwy N, Milton</p>
                     <br>
-                    <p class="lead fw-normal text-muted mb-0"><strong>How: Come out at noon to make sure you are a part of all the fun! </strong></p>
+                    <p class="lead fw-normal text-muted mb-0"><strong>How:</strong> Come out at noon to make sure you are a part of all the fun! </strong></p>
                     <br>
                 </div>
             </div>
